Update VOCUS 2022-06-25 patch

--- a/_posts/2022-06-24-VOCUS-關於桃園平埔族的二三事(五).html
+++ b/_posts/2022-06-24-VOCUS-關於桃園平埔族的二三事(五).html
@@ -8,4 +8,50 @@ tags: blog
 author: 雀榕
 ---
 
-<p><br></p>
+<h3>前言：</h3>
+<p>現在大家嘴巴所說的「桃園市」，是在2010年五都升格以後才出現，之前叫做「桃園縣」。升格前的「桃園市」則是現今的「桃園區」。升格前後，「桃園」的面積沒有什麼改變，看起來相當穩定，幾十年來沒有重大變化。我想，使用這個比較穩定的框架來談桃園平埔族，讀者的接受度會比較高，也比較容易理解。</p>
+<p>如果用地理區作框框，桃園境內有高山、丘陵、河階、台地、平原……多種地形，可以分作好幾個區域，寫成好幾篇文章，不過這樣做，已經超越我的負荷能力，需要勞煩學有專精的教授與文史工作者來寫了。為了讓內容不要太過無趣，嚇走讀者，以下我將用Q&A的方式呈現，如果這篇文章能讓您快速得到相關資訊，甚至得到一些趣味，想進一步了解桃園的平埔族，真是再好不過！</p>
+<h3>除了郁永河，還有哪位文人寫到桃園地區、桃園的平埔族？</h3>
+<p>郁永河之後，有一位清代文人寫到桃園的平埔族，這位文人就是康熙61年來台視察的巡台監察御史黃叔璥。黃叔璥不像郁永河那樣──只在台灣短期停留，對很多地方只有比較浮面的觀察──而是仔細考察台灣的地理形勢、風土民情，然後將當時歸順滿清的原住民分類，並記錄這些原住民的食衣住行、婚喪喜慶。其次，他也引用了郁永河《裨海紀遊》、《番境補遺》、《海上紀略》關於台灣原住民的文句，並將自己的記錄編成《臺海使槎錄》這本書。</p>
+<p>對於桃園的地貌，黃叔璥沒有描寫，只有引用郁永河《裨海紀遊》裡的一段：</p>
+<blockquote>(前面的內容與本文無關，省略) 自竹塹迄南嵌八、九十里，不見一人一屋；求一樹就陰不得。途中遇麋鹿麚逐隊行甚夥。既至南嵌，入深箐中，披荊度莽，冠履俱敗；直狐貉之窟，非人類所宜至也</blockquote>
+<p>也許是因為桃園的地貌與幾十年前郁永河所見相差不大，他認為不需要動筆寫新的東西，所以乾脆襲用郁永河的看法？！倒是桃園的平埔族，黃叔璥比郁永河更進一步，在〈番俗六考〉寫道：</p>
+<blockquote>龜崙、霄裏、坑仔諸番體盡"矲亞"(短小)，趨走促數，又多斑癬，狀如生番。</blockquote>
+<p>黃叔璥說：龜崙、霄裏、坑仔這幾個番社的原住民身材矮小，步伐小，但走的很快 (另一個白話翻譯版本是：頻繁為官府奔走服役) 長很多斑癬，外貌像那些還沒歸化、作為化外之民的原住民。雖然只有短短一句，卻讓後世的平埔族研究者、桃園文史愛好者印象深刻，並反覆援引。可惜他只寫了龜崙、霄裏、坑仔這些原住民的體貌，卻沒有記下他們的風俗習慣、神話傳說，以及民謠祭歌。</p>
+<p>黃叔璥寫下這句話以後，似乎沒有第二位書寫桃園與桃園平埔族的清代文人，因為目前還沒有找到更多描寫桃園與桃園平埔族的詩文，也找不到比黃叔璥寫的更多的清代文人。至於大家在書上、網上看見的日治時期原住民照片、清領時期文人所畫的番人畫像，桃園地區的平埔族一張也沒有！</p>
+<p>由於這方面的文獻與圖像十分匱乏，加上桃園地區的平埔族在19世紀中葉已經被同化殆盡，以至於日治時代撰寫《平埔蕃調查書》的日人官吏，以及歷來研究桃園地區平埔族的學者，對於桃園平埔族的一切──尤其是他們古來的傳統生活方式、語言、思想，知道的極少，近乎一片空白！</p>
+<p>幸好，滿清官員曾對桃園平埔族推行什麼措施，如：立社學，教化原住民子弟；要求原住民使用漢式姓名；實施「屯丁」制度；開拓官道(台一線桃園段的前身)，以及各村社在乾隆年間曾幫助官方抵御林爽文軍隊等歷史事件，被《平埔蕃調查書》負責調查桃園地區的日人官吏記錄下來，他們從一些前朝官方文書與當地耆老口中得知上述事跡。</p>
+<img src="https://images.vocus.cc/652e6ea8-8e7e-4d16-be22-8691598b5853.jpg" alt="20世紀初，日人官吏、基層警員奉上級之令，調查全台平埔族的戶口、歷史。調查報告後來被編成《熟蕃戶口及沿革調查綴》。原件已不存在，以抄本的方式流傳。戰後，學者根據中研院民族學研究所、國立臺灣圖書館的抄本翻成中文。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">20世紀初，日人官吏、基層警員奉上級之令，調查全台平埔族的戶口、歷史。調查報告後來被編成《熟蕃戶口及沿革調查綴》。原件已不存在，以抄本的方式流傳。戰後，學者根據中研院民族學研究所、國立臺灣圖書館的抄本翻成中文。</figcaption>
+<h3>南崁社、霄裏社、龜崙社的人會說自己是平埔族嗎？</h3>
+<p>「平埔族」這個詞與大家耳熟能詳的「生番」、「熟番」、「化番」、「高砂族」、「原住民」、「原住民族」、「南島語族」、「南島民族」……一樣，都是不同時代的人創造出來的名詞，之所以創造這些名詞是出於統治方便、學術研究，以及喚醒許多自認是○○族的人起來，爭取政治權利……諸如此類的目的。</p>
+<p>生活在桃園這塊土地的原住民，自古以來不曾這麼說：</p>
+<p>「喂！荷蘭仔！請不要進入我們『平埔族』的土地！」</p>
+<p>「我們泰雅族曾經在桃園西部活躍喔~~」</p>
+<p>「霄裏鄉親大家好！我是桃園平埔族南崁社的大眼睛！請多指教！」</p>
+<p>因為幾千年來，他們只有村社概念，即使後來被強大的外來者征服統治，村社在人們心中仍然非常重要，直到人們被滿清官府以漢字、漢語作為載體的儒家思想，大規模教化，又與大批閩粵移民、來自外地的漢化人接觸，才被「家族」、「皇帝」、「天下」之類的詞彙與觀念逐漸取代。</p>
+<p>之後，桃園地區與桃園人作為全台一體化的「日本國」，與現今「中華民國」難以分割的一部分，通行於這兩個時期的各路名詞，例如：「番人」、「高砂族」、「原住民」、「原住民族」、「平地原住民」、「平埔族」、「南島語族」、「南島民族」、「凱達格蘭族」……就成為稱呼自己或是他人的族名，而逐漸取代原來的南崁、霄裏、龜崙……等名詞。</p>
+<h3>桃園平埔族與泰雅族、賽夏族有什麼關係？</h3>
+<p>桃園平埔族的祖源非常多樣，應該少不了這兩族。漢化前的閩粵沿海居民有可能在某個時期渡海來台，移居桃園；新竹與新北境內的平地原住民也可能移入桃園居住；荷西時代，活躍在北台灣的馬賽人，也許一部分人在桃園落戶，融入南崁、霄里這些村社；連看似與平埔族沒什麼關係的泰雅族，他們的祖先兩三百年前很可能活躍在桃園西部！</p>
+<p>台灣歷史學者翁佳音透過語音比對，大膽提出一個觀點，他說：</p>
+<blockquote>荷蘭文獻中北部頂頂大名原住民族群龜崙人（Coulonder），學術界通常含糊把他當成是「平埔族」的龜崙族，大概是老番第一個力證龜崙人有泰雅族的成分。(按：作者文中的「頂頂大名」應該是「鼎鼎大名」才對。)</blockquote>
+<blockquote>今天桃園龜山曾自認為「黃帝子孫」的「永」與「干」姓，祖先就是泰雅族的Iyun、Yukan或Nokan</blockquote>
+<blockquote>十七世紀泰雅族人在桃園西邊活躍，是不能否認的事實，桃園市中心附近以前有「虎茅莊Hóu-bâu」與「奶笏莊Nái-hut」老地名。</blockquote>
+<blockquote>前者雖然有文史雅好人士解釋為桃園以前有茅草銳利似虎之傷人，但這種用法在其他蠻南語通行的國家與地區不曾出現，它也無法同時解釋「奶笏」的起源。</blockquote>
+<blockquote>老番以泰雅族長期以來在桃園西部活躍的背景，以及泰雅族有時用頭目名當社名的慣例，研判兩名應來自泰雅人名：Xabao (Habao), Naui。</blockquote>
+<blockquote>十八世紀三零年代，「南崁虎茅庄業主周添福，有前年明買番地壹所，土名虎茅庄，經請墾報課在案」，明顯是漢人買番地，番地名「虎茅」，不是漢語。又，附圖方志中的「甘棠莊」，就是常見的「茄苳莊Ka-tang」。</blockquote>
+<p>這樣觀點到底成不成立，有待考古學家、歷史學者驗証，倒是現今殘存的桃園平埔族後代──龜山的永姓家族，有「祖先兩三百年前是從竹頭角遷徙到龜山」的口傳歷史，來呼應他的說法。這則口傳歷史的真實性雖然還需要血緣研究，以及長興部落那一方的說法來驗証，至少這位學者的說法啟示我們：泰雅族、平埔族並非兩個沒有交集的族群。部分泰雅族先民可能先前移住桃園台地、龜山丘陵等地。(註：「竹頭角」現今位於石門水庫西南，原名"Thawkak"的長興部落。)</p>
+<p>至於桃園平埔族與賽夏族有什麼關係，考証難度更高。因為賽夏族的祖先有沒有在桃園生活過？一部分桃園平埔族人的祖先是不是從賽夏族部落遷徙？至今無史可考，不論是翻查國史館台灣文獻館所出的賽夏族史、北部平埔族史，都無法解答上述的問題。</p>
+<p>兩造的口述歷史現今仍無法証明兩群人有共同的祖先，以及結盟、通婚、貿易、互相征戰等行動。儘管部分賽夏族人傳說：祖先的生活領域曾北達淡水河，在現今的大溪、鶯歌、三峽、樹林一帶建立部落──這樣的傳說內容，目前還無法証明「南崁、龜崙、霄裏等社群就是這批賽夏族人的直系子孫」的說法。</p>
+<p>1985年，研究台灣原住民語言的日本學者土田 滋(Shigeru Tsuchida)，透過語料的比對，發現：一些龜崙語的詞彙，與賽夏族的非常相近。然後進一步推論，認為：龜崙語與賽夏語關係密切。此外，土田 滋還根據黃叔璥〈番俗六考〉當中的這段描述，「龜崙、霄裡、坑仔諸番體盡矲亞，趨走促數，又多斑癬，狀如生番」，推斷：龜崙族很可能就是賽夏族矮靈祭傳說中的矮人。不過，這樣的推斷至今還沒有得到証實。</p>
+<p>《台灣血統》這本書的作者沈建德，在「桃園縣血統的真相」寫道：</p>
+<blockquote>在約6、7千年前，本縣為賽夏族打獵範圍，後來，部分族人從大漢溪順流而下台北，和泰雅族，以及由淡水及澳底上岸的南島民族接觸，形成新民族，被稱凱達格蘭平埔族，是台灣最後漢化的本地族群之一。</blockquote>
+<p>他認為，桃園平埔族是賽夏、泰雅、由淡水及澳底上岸的南島民族所形成的混血民族，是這個混血新民族──凱達格蘭族的一部分。可是他在書裡並沒有清楚交代自己的立論依據，也沒有向讀者展示自己的推斷過程。</p>
+<p>翁佳音、土田 滋、沈建德的說法正不正確？桃園平埔族與泰雅族、賽夏族有什麼關係？統統有勞考古學家、台灣歷史學者、血緣研究專家，以及對這些議題有興趣的地方文史工作者進一步研究，解開上述的謎團！大家拭目以待吧！</p>
+<h3>(第五部分結束)</h3>
+<h3>參考資料：</h3>
+<p>1.維基文庫：黃叔璥「臺海使槎錄」、郁永海「裨海紀遊」。</p>
+<p>2.翁佳音、陳怡宏/中譯，《<a href="https://www.books.com.tw/products/0010580503">平埔蕃調查書</a>》，國立台灣歷史博物館。</p>
+<p>3.翁佳音「<a href="https://bearpost.org/?p=46327">老番的台灣史：桃園市區裡的泰雅地名</a>」。出處：「彌勒熊報」。同樣的文章也見於個人臉書「Kaim Ang」2022年1月19日貼文。</p>
+<p>4.「文化部國家文化記憶庫」的詞條：「<a href="https://memory.culture.tw/Home/Detail?Id=224094&IndexCode=Culture_Place">龜崙社的身世</a>」。</p>
+<p>5.溫振華「龜崙社研究」(台灣風物60卷4期)。</p>
