--- a/_posts/2022-06-24-INMEDIA-甘浩望爭港人內地子女居留權-昐李家超不忘150個單程證配額初衷.html
+++ b/_posts/2022-06-24-INMEDIA-甘浩望爭港人內地子女居留權-昐李家超不忘150個單程證配額初衷.html
@@ -13,7 +13,7 @@ author: 獨媒報導
 <p>甘浩望神父聯同居留權委員會、爭取子女居留權家長協會及居留權大學三個組織，今早（24日）於政總外請願。他們拉起寫有「尊重人權，實踐承諾，還我家庭團聚」的橫額，高呼「626釋法，可恥」、「還我廿四條」、「家庭團聚，天經地義，還我子女居港權」等口號，並向保安局局長鄧炳強遞交請願信。局方派員接信，現場有近8名警員戒備，警員逐一登記請願人士個人資料。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/iP25AF" title="無標題"><img src="https://live.staticflickr.com/65535/52167962352_5f31ed786e_z.jpg" width="640" alt="無標題" /></a></p>
 <p>甘浩望神父指，目前香港社會氣氛低迷，加上新冠疫情及國安法令更多人感憂慮，促當局盡全力和中央政府商討，解決居留權事件，讓中港家庭團聚，同時給予香港社會信心。</p>
-<p>爭取居港權多年的港人內地子女的蔡錐續指，現時有近3,000人正受「行街紙」續期而困擾，反問「唔通要續到我哋死為止先一了百了？」她要求政府盡快公平、公正解決居留權問題。</p>
+<p>爭取居港權多年的港人內地子女的蔡錐續指，現時她正受「行街紙」續期困擾，反問「唔通要續到我哋死為止先一了百了？」她要求政府盡快公平、公正解決居留權問題。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/w05zSS" title="七旬婆婆蔡錐"><img src="https://live.staticflickr.com/65535/52169300719_59977352bd_z.jpg" width="640" alt="七旬婆婆蔡錐" /></a><br /><em>蔡錐</em></p>
 <p>被問對新一屆政府有何期望，甘浩望神父強調希望政府能正視香港人權性問題，又點名提到2013年時任保安局副局長李家超，面對有立法會議員提出減少每日150個單程證配額時，曾堅稱政府保持名額的主要原因為家庭團聚，「希望我哋呢個特首都記得呢件事啦」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7310Uu" title="無標題"><img src="https://live.staticflickr.com/65535/52168988396_56e13bee7c_z.jpg" width="640" alt="無標題" /></a><br /><em>甘浩望神父</em></p>
