Update VOCUS 2022-06-26 patch

--- a/_posts/2022-06-25-VOCUS-暴力升息與軟著陸.html
+++ b/_posts/2022-06-25-VOCUS-暴力升息與軟著陸.html
@@ -8,4 +8,5 @@ tags: blog
 author: 吳嘉隆
 ---
 
-暴力升息與軟著陸
+<p>目前華爾街的共識，就是高通膨有持續性，於是，期待聯準會認真對抗通膨。聯準會在六月升息3碼，還暗示七月也會再升3碼。現在華爾街在關注的是九月的利率會議，有三個可能，分別是照舊升兩碼，只升一碼，與暫停升息。</p>
+<p>美銀策略師曾在5月26 日表示，假如美國經濟增長放緩或通膨有降溫跡象，聯準會可能在9月暫緩升息，讓利率先保持在 1.75-2%，以評估先前連續升息對就業和通膨的影響。在我看，這樣的討論一方面反映出9月以後的利率路徑仍然有不確定性，另方面也是華爾街在拋出話題，來試探聯準會的反應。</p>
