--- a/_posts/2022-06-25-VOCUS-美國升息表面上是對抗高通膨-這樣說沒錯-但是.html
+++ b/_posts/2022-06-25-VOCUS-美國升息表面上是對抗高通膨-這樣說沒錯-但是.html
@@ -8,4 +8,6 @@ tags: blog
 author: 吳嘉隆
 ---
 
-美國升息表面上是對抗高通膨，這樣說沒錯，但是⋯
+<p>美國這次的高通膨是多重因素同時匯聚，也可以算是一個完美風暴，這些因素包括：</p>
+<p>1）疫情之下造成美國自己的製造、服務與運輸活動不能正常運作，形成「供給短缺」，尤其運費的上升構成另一種成本推動的通膨。這個問題不是聯準會升息能夠解決的，因為升息並不能對付病毒，讓疫情緩和下來；</p>
+<p>2）中國上海的封城與隔離，讓很多工業產品與零件不能順利出口，造成供應鏈的斷裂，使得別的國家的製造活動沒辦法正常進行。上海的封城疊加在上面所說的供給短缺，讓事情變得更嚴重。</p>
