--- a/_posts/2022-06-25-VOCUS-美國邀請中共玩-關鍵技術競賽.html
+++ b/_posts/2022-06-25-VOCUS-美國邀請中共玩-關鍵技術競賽.html
@@ -8,4 +8,8 @@ tags: blog
 author: 吳嘉隆
 ---
 
-美國邀請中共玩「關鍵技術競賽」
+<p>面對台積電，中共急了，亂了。</p>
+<p>中共的經濟學家陳文玲講的「搶下台積電」的話，重點還不是這樣的狠話很有土匪的味道，而是還另外有文章。</p>
+<p>說她是土匪的味道，是因為她說台積電本來就是中國的，這種思維分明就是土匪，然後，她說要用搶的，那就更土匪了。</p>
+<p>這下子中共對於高新技術的態度，大家都看懂了，那就是先用滲透的，能偷就偷，能騙就騙，萬一還是不行，那就用搶的。</p>
+<p>說她還另外有文章，是因為她這樣說，等於中共在承認下面幾件事情。第一個是，承認中共在2015年所推出來的「中國製造2025」，要建立高新技術能力，要從「製造大國」變成「製造強國」，是失敗了。</p>
