--- a/_posts/2022-06-25-INITIUM-what's-new-美最高法院推翻-罗诉韦德案-判决书说了什么.html
+++ b/_posts/2022-06-25-INITIUM-what's-new-美最高法院推翻-罗诉韦德案-判决书说了什么.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'What''s New: 美最高法院推翻“罗诉韦德案”：判决书说了什么？'
+title: What's New：美最高法院推翻“罗诉韦德案”，判决书说了什么？
 date: 2022-06-25 01:49:00.000000000 +00:00
 link: https://theinitium.com/article/20220625-international-supreme-court-overturns-roe-v-wade/
 categories: initium
