--- a/_posts/2022-06-24-INMEDIA-商人襲擊女議助上訴失敗囚4周-法官指-荒謬言詞不會因重複變可信.html
+++ b/_posts/2022-06-24-INMEDIA-商人襲擊女議助上訴失敗囚4周-法官指-荒謬言詞不會因重複變可信.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/4444_6.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>前深水埗區議員李文浩前年5月擺街站收集市民簽名，一名眼鏡商人途經街站時大罵義工「人渣、垃圾」，拉扯李文浩衣領，並抓傷李的女助理。早前商人經審訊後被裁定普通襲擊罪成，判監4星期。他不服提出上訴，稱當時率先遇襲，合法行使「市民拘捕權力」。高院法官李運騰今駁回商人上訴，商人在原審時被裁定不誠實證人，「市民拘捕權力」毫無可取之處，甚至不應被提出。即使商人被捕後否認打人，但李官表示：「荒謬的言詞不會因為被一再重複而變得更為可信。」</p>
+<img src="https://www.inmediahk.net/files/column_images/4444_6.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>前深水埗區議員李文浩前年5月擺街站收集市民簽名，一名眼鏡商人途經街站時大罵義工「人渣、垃圾」，拉扯李文浩衣領，並抓傷李的女助理。早前商人經審訊後被裁定普通襲擊罪成，判監4星期。他不服提出上訴，稱當時率先遇襲，合法行使「市民拘捕權力」。高院法官李運騰今駁回商人上訴，商人在原審時被裁定不誠實證人，「市民拘捕權力」毫無可取之處，甚至不應被提出。即使商人被捕後否認打人，但李官表示：「荒謬的言詞不會因為被一再重複而變得更為可信。」</p>
 <p>上訴人尹載道案發時48歲，求情時透露他年少時曾在加拿大讀書，1989年回港，案發時經營眼鏡生意。控罪指他在2020年5月29日在深水埗元州街162 號外襲擊余凱琳。余為李文浩的女助理。駁回上訴後尹載道須即時入獄。</p>
 <p>原審案情提及，事主當時正在議員辦事處擺設街站，上訴人途經時罵事主和其他人「人渣、垃圾」，事主見上訴人扯著李文浩衣領，便走到兩人中間，制止上訴人拖襲，及希望分開兩人。上訴人打中事主的頭，再輕微抓傷她的手並留到抓痕，她的腳亦有瘀傷。</p>
 <p><strong>自辯反稱被李文浩打頭、事主撞他</strong></p>
