--- a/_posts/2022-06-24-INMEDIA-官員確診影響宣誓-范徐麗泰-毋須我哋平民百姓擔心.html
+++ b/_posts/2022-06-24-INMEDIA-官員確診影響宣誓-范徐麗泰-毋須我哋平民百姓擔心.html
@@ -8,16 +8,16 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/20220624f.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>獲邀出席七一慶回歸活動的嘉賓，包括官員、立法會議員等昨日起「閉環管理」，前全國人大常委范徐麗泰、基本法委員會副主任譚惠珠等人，連續第二日到禮頓山社區會堂作核酸檢測。被問到官員陳國基、曾國衞<a href="https://bit.ly/3bpoUY4">確診</a>會否影響宣誓就任，范徐麗泰表示：「呢啲由政府決定，唔需要由我哋平民百姓嚟擔心。」</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Kg3X47" title="無標題"><img src="https://live.staticflickr.com/65535/52168063432_a7ff817554_z.jpg" width="640" alt="無標題" /></a><br /><em>基本法委員會副主任譚惠珠</em></p>
+<img src="https://www.inmediahk.net/files/column_images/20220624f.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>獲邀出席七一慶回歸活動的嘉賓，包括官員、立法會議員等昨日起「閉環管理」，前全國人大常委范徐麗泰、基本法委員會副主任譚惠珠等人，連續第二日到禮頓山社區會堂作核酸檢測。被問到官員陳國基、曾國衞<a href="https://bit.ly/3bpoUY4">確診</a>會否影響宣誓就任，范徐麗泰表示：「呢啲由政府決定，唔需要由我哋平民百姓嚟擔心。」</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Kg3X47" title="無標題"><img src="https://live.staticflickr.com/65535/52168063432_a7ff817554_z.jpg" alt="無標題" /></a><br /><em>基本法委員會副主任譚惠珠</em></p>
 <p>政制及內地事務局局長曾國衞、候任政務司司長、特首辦主任陳國基昨日確診新冠，連同早前同確診的立法會議員陳祖恒、劉業強，情況在政圈引起關注。</p>
 <p>當局表示會密切留意情況，適當安排七一宣誓儀式。范徐麗泰則稱近日沒有見到曾國衞、陳國基二人，「我好少見到佢哋」，並指暫時未看到有任何理由會影響慶回歸活動進行，</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/A9eE03" title="無標題"><img src="https://live.staticflickr.com/65535/52169088636_15e865fe04_z.jpg" width="640" alt="無標題" /></a><br /><em>候任行政會議召集人葉劉淑儀</em></p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3J7pye" title="無標題"><img src="https://live.staticflickr.com/65535/52169332864_d202444d09_z.jpg" width="640" alt="無標題" /></a><br /><em>足總主席貝鈞奇</em></p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/" title="無標題"><img src="https://live.staticflickr.com/65535/52168063647_cd05ec3e5f_z.jpg" width="640" alt="無標題" /></a><br /><em>浸大校長衞炳江</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/A9eE03" title="無標題"><img src="https://live.staticflickr.com/65535/52169088636_15e865fe04_z.jpg" alt="無標題" /></a><br /><em>候任行政會議召集人葉劉淑儀</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3J7pye" title="無標題"><img src="https://live.staticflickr.com/65535/52169332864_d202444d09_z.jpg" alt="無標題" /></a><br /><em>足總主席貝鈞奇</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/" title="無標題"><img src="https://live.staticflickr.com/65535/52168063647_cd05ec3e5f_z.jpg" alt="無標題" /></a><br /><em>浸大校長衞炳江</em></p>
 <p>候任行政會議召集人葉劉淑儀、立法會議員容海恩、陳穎欣、林健鋒、足總主席貝鈞奇、浸大校長衞炳江等今早同到禮頓山社區會堂作核酸檢測。</p>
 <p>獲邀出席七一慶回歸活動的嘉賓，須包括每日接受核酸檢測，及由司機接送點對點到工作地方。另外，有報道指，出席嘉賓須在參加活動前一日入住指定酒店，大部分人士在6月30日入住，出席7月1日活動。而現屆、下屆官員，和行會成員則須提早在29日入住，出席30日及7月1日一連兩日活動。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/b0ih83" title="無標題"><img src="https://live.staticflickr.com/65535/52169013628_d176ce43f1_z.jpg" width="640" alt="無標題" /></a><br /><em>左起：李惟宏、陳勇</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/b0ih83" title="無標題"><img src="https://live.staticflickr.com/65535/52169013628_d176ce43f1_z.jpg" alt="無標題" /></a><br /><em>左起：李惟宏、陳勇</em></p>
 <p>有部份立法會議員則到位於政府總部的檢測站作檢測，金融服務界李惟宏表示，過去兩日並無直接與陳國基等確診官員會面，但指目前仍未見官員確診對慶祝七一回歸活動有大規模影響及阻滯，政府亦未有特別新安排。</p>
 <p>民建聯陳勇則表示，提醒市民小心疫情反彈，不能掉以輕心，希望慶回歸及新一屆政府就職典禮等活動可以順利舉行。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
