--- a/_posts/2022-06-24-INMEDIA-支聯會顛覆案押9.14再訊-鄒幸彤初級偵訊9月進行.html
+++ b/_posts/2022-06-24-INMEDIA-支聯會顛覆案押9.14再訊-鄒幸彤初級偵訊9月進行.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/14_13.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>已解散的支聯會、前主席李卓人、前副主席何俊仁和鄒幸彤遭控「煽動顛覆國家政權」罪，今（24日）於西九龍法院進行第4次提訊日。鄒幸彤早前已要求初級偵訊，聆訊今由兩個月縮短為一星期，改於9月2日至13日進行，《國安法》指定法官、主任裁判官羅德泉並將案件押後至9月14日進行第5次提訊日，期間所有被告繼續還柙。</p>
+<img src="https://www.inmediahk.net/files/column_images/14_13.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>已解散的支聯會、前主席李卓人、前副主席何俊仁和鄒幸彤遭控「煽動顛覆國家政權」罪，今（24日）於西九龍法院進行第4次提訊日。鄒幸彤早前已要求初級偵訊，聆訊今由兩個月縮短為一星期，改於9月2日至13日進行，《國安法》指定法官、主任裁判官羅德泉並將案件押後至9月14日進行第5次提訊日，期間所有被告繼續還柙。</p>
 <p>案件由國安法指定法官、主任裁判官羅德泉處理。控方代表為署理助理刑事檢控專員張卓勤，支聯會由破產管理署委聘、8.18流水集會案其中一名控方大律師林芷瑩代表，鄒幸彤則沒有律師代表。</p>
 <p>三人步入法庭時與旁聽人士互相揮手，李卓人雙手放頭做出大心，有旁聽人士喊「加油」、「人人同你撐」，又對鄒幸彤說：「瘦咗、靚咗」，被保安要求肅靜。散庭後，李卓人走近旁聽席，舉高雙手揮動並握拳做打氣手勢，旁聽人士紛紛站起揮手，說「撐住呀」、「仁哥保重」、「阿人撐住」，有童聲說「bye bye 公公！」，鄒幸彤臨入庭時做出韓式心心，保安則一直在旁喝止。支聯會前幹事梁錦威亦有到庭旁聽。</p>
 <p>鄒幸彤上次提訊已要求初級偵訊，排期8月10日至10月12日進行，歷時兩個月。其初級偵訊今縮短為7天，並改於9月2日至13日進行，所有被告並將於9月14日進行第5次提訊日。</p>
