--- a/_posts/2022-06-24-INMEDIA-林鄭-每天觀看央視吸取國家最新資訊.html
+++ b/_posts/2022-06-24-INMEDIA-林鄭-每天觀看央視吸取國家最新資訊.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/new_11.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>即將卸任的行政長官林鄭月娥在今中央廣播電視總台慶回歸活動表示，自己是總台「各個頻道的忠實觀眾」，而且她每天觀看港台轉播的CCTV綜合頻道，吸取國家最新資訊。</p>
+<img src="https://www.inmediahk.net/files/column_images/new_11.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>即將卸任的行政長官林鄭月娥在今中央廣播電視總台慶回歸活動表示，自己是總台「各個頻道的忠實觀眾」，而且她每天觀看港台轉播的CCTV綜合頻道，吸取國家最新資訊。</p>
 <p>近期頻頻接受傳媒訪問的林鄭，不時透露任特首期間的日常生活，她曾稱出任特首初期仍有與丈夫看早場電影，但其後沒有，又指5年任期長時間都很緊張，「晚晚都要將手機放床頭」。</p>
 <p>林鄭今在中央廣播電視總台CGTN紀錄頻道一個回歸活動節目中指，該台的國際影響力快速增強，得到海內外「更廣泛的關注和認可」。林鄭又透露，自己也是該總台各個頻道的忠實觀眾，她每天觀看在香港電台33台轉播的央視綜合頻道（CCTV-1），吸取國家最新資訊。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Yn786p" title="5CC25D7C837B4A86934CC8900AFF88E5_O"><img src="https://live.staticflickr.com/65535/52169528070_2599780fc7.jpg" width="500" alt="5CC25D7C837B4A86934CC8900AFF88E5_O" /></a></p>
