--- a/_posts/2022-06-24-INMEDIA-理大圍城-被告稱送人回家後遭撞跌被人壓-控方突指控攜生理鹽水-官裁定不得再問.html
+++ b/_posts/2022-06-24-INMEDIA-理大圍城-被告稱送人回家後遭撞跌被人壓-控方突指控攜生理鹽水-官裁定不得再問.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/saline.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>2019年11月，大批市民欲營救被困理大的示威者，油麻地共213人遭圍捕被控暴動，獨立歌手莊正等11人的案件今（24日）於區域法院續審。任地盤管工的被告自辯稱，晚飯後駕車送友人的女友回家，離開時途徑有人群的小巷，後方卻突然有人湧入，導致他倒地並遭其他人壓在身體上，約15分鐘後消防將他救出，隨即遭警員上索帶。控方於盤問時增加對被告的指控，指他管有生理鹽水，惟控方於審訊階段一直沒有提及會依賴作舉證。辯方反對並認為會影響辯護方向，法官亦認為事件嚴重會造成不公，最後裁定控方不得再就此方面提問。</p>
+<img src="https://www.inmediahk.net/files/column_images/saline.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>2019年11月，大批市民欲營救被困理大的示威者，油麻地共213人遭圍捕被控暴動，獨立歌手莊正等11人的案件今（24日）於區域法院續審。任地盤管工的被告自辯稱，晚飯後駕車送友人的女友回家，離開時途徑有人群的小巷，後方卻突然有人湧入，導致他倒地並遭其他人壓在身體上，約15分鐘後消防將他救出，隨即遭警員上索帶。控方於盤問時增加對被告的指控，指他管有生理鹽水，惟控方於審訊階段一直沒有提及會依賴作舉證。辯方反對並認為會影響辯護方向，法官亦認為事件嚴重會造成不公，最後裁定控方不得再就此方面提問。</p>
 <p><strong>被告自辯稱當日駕車送朋友女友回家</strong></p>
 <p>法官林偉權早前裁定表面證供成立。報稱地盤管工的首被告歐陽浩明自辯稱，案發當日在天水圍濕地公園道的地盤上班，約晚上6時半下班，他原相約女友到元朗的夾公仔店夾公仔及吃晚飯。他離開地盤時曾聯絡女友，但得知她仍在家中睡覺，因此被告聯絡其朋友哈先生。</p>
 <p>被告聯絡哈先生後，得知他與家人會到元朗安興街的夾公仔店，於是就約在該店等候。被告從天水圍駕車出發，約15分鐘後到達，並將車泊在夾公仔店旁。被告稱待夾公仔店的店主 Oscar 處理完店務後，約8時半下車與他們會合，並與哈生家人、Oscar 及其女友共7人吃晚飯。</p>
