--- a/_posts/2022-06-25-INMEDIA-梁愛詩-港人因受殖民地管治致國家觀念薄弱.html
+++ b/_posts/2022-06-25-INMEDIA-梁愛詩-港人因受殖民地管治致國家觀念薄弱.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/%E6%A2%81%201280.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>香港回歸25年在即，首任律政司司長、基本法委員會前副主任梁愛詩接受電台訪問時稱，許多港人國家觀念薄弱，是由於香港過去曾受殖民地管治，「因為喺殖民地之下，佢唔想你有國家觀念。」她認為港人身分由「殖民地公民」變為「特區公民」，至今持抗拒中央的態度，是涉及歷史緣故。</p>
+<img src="https://www.inmediahk.net/files/column_images/%E6%A2%81%201280.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>香港回歸25年在即，首任律政司司長、基本法委員會前副主任梁愛詩接受電台訪問時稱，許多港人國家觀念薄弱，是由於香港過去曾受殖民地管治，「因為喺殖民地之下，佢唔想你有國家觀念。」她認為港人身分由「殖民地公民」變為「特區公民」，至今持抗拒中央的態度，是涉及歷史緣故。</p>
 <p><strong>指港人對人大釋法抱疑慮 源於對一國兩制認識不足<strong></strong></strong></p>
 <p>梁愛詩今早接受商台節目「政經星期六」訪問，提到不少人對回歸後中央數次釋法，包括05年首任行政長官董建華辭職，及16年立法會宣誓風波等抱持疑慮，是源於對一國兩制和《基本法》認識不夠清晰，重申基本法亦列明政府官員和立法會議員須效忠特區，「如果呢啲權力落喺損害香港、損害國家、損害香港人嘅手裡面呢，就會令我哋受損害。」她強調根據國家制度，法律解釋權屬於人大常委會，而且《基本法》中清楚訂明，人大常委會的權力不可置疑。</p>
 <p>她表示，許多港人國家觀念薄弱，是由於香港過去曾是殖民地，「因為喺殖民地之下，佢唔想你有國家觀念，咁回歸嘅意思其實係你改換咗一個身份，你要對國家民族嘅認同，同接受中華人民共和國公民嘅身份。」她認為港人身分由「殖民地公民」變為「特區公民」，至今持抗拒中央的態度，是涉及歷史緣故。</p>
