--- a/_posts/2022-06-25-INMEDIA-港足商場祝捷-許賢任嘉賓冀足總勿做勝利球迷.html
+++ b/_posts/2022-06-25-INMEDIA-港足商場祝捷-許賢任嘉賓冀足總勿做勝利球迷.html
@@ -8,23 +8,23 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/20220625hky.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>港足在54年後再次晉身<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E6%B8%AF%E8%B6%B354%E5%B9%B4%E5%BE%8C%E9%87%8D%E8%BF%94%E4%BA%9E%E6%B4%B2%E7%9B%83%E6%B1%BA%E8%B3%BD%E9%80%B1-%E9%BB%83%E6%B4%8B%EF%BC%9A%E5%88%9D%E6%99%82%E5%94%94%E5%A4%A0%E8%86%BD%E8%AB%97%E5%87%BA%E7%B7%9A">亞洲盃決賽週</a>，周六下午到商場參與祝捷活動，過百名球迷到場支持並高呼「We are Hong Kong」。港足球迷兼YouTuber 許賢獲邀為嘉賓，他希望能散發更多凝聚力予球迷、足總，「希望足總唔好做勝利球迷，唔好贏波嗰陣先支持港隊。」</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/ZK1mh0" title="DSC_6727"><img src="https://live.staticflickr.com/65535/52171982135_cc8ba54222_z.jpg" width="640" alt="DSC_6727" /></a></p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/T5rP62" title="DSC_6707"><img src="https://live.staticflickr.com/65535/52171505733_ac36b96805_z.jpg" width="640" alt="DSC_6707" /></a></p>
+<img src="https://www.inmediahk.net/files/column_images/20220625hky.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>港足在54年後再次晉身<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E6%B8%AF%E8%B6%B354%E5%B9%B4%E5%BE%8C%E9%87%8D%E8%BF%94%E4%BA%9E%E6%B4%B2%E7%9B%83%E6%B1%BA%E8%B3%BD%E9%80%B1-%E9%BB%83%E6%B4%8B%EF%BC%9A%E5%88%9D%E6%99%82%E5%94%94%E5%A4%A0%E8%86%BD%E8%AB%97%E5%87%BA%E7%B7%9A">亞洲盃決賽週</a>，周六下午到商場參與祝捷活動，過百名球迷到場支持並高呼「We are Hong Kong」。港足球迷兼YouTuber 許賢獲邀為嘉賓，他希望能散發更多凝聚力予球迷、足總，「希望足總唔好做勝利球迷，唔好贏波嗰陣先支持港隊。」</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/ZK1mh0" title="DSC_6727"><img src="https://live.staticflickr.com/65535/52171982135_cc8ba54222_z.jpg" alt="DSC_6727" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/T5rP62" title="DSC_6707"><img src="https://live.staticflickr.com/65535/52171505733_ac36b96805_z.jpg" alt="DSC_6707" /></a></p>
 <p>6名港足球員黃威、鞠盈智、羅梓駿、劉學銘、簡嘉亨及杜馬思出席活動，其中黃威最受球迷歡迎，他在進場時有球迷拍手及尖叫。而足總高層包括主席貝鈞奇、行政總裁譚秋朗等人則未見身影。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/23D902" title="DSC_6906"><img src="https://live.staticflickr.com/65535/52171500528_0ddc9375cd_z.jpg" width="640" alt="DSC_6906" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/23D902" title="DSC_6906"><img src="https://live.staticflickr.com/65535/52171500528_0ddc9375cd_z.jpg" alt="DSC_6906" /></a></p>
 <p><strong>許賢最愛「威威」  盼更多球迷撐港足</strong></p>
 <p>港足在新任主教練安達臣領軍下，一改穩守突擊踢法，改踢高位迫搶，成功取得兩連勝，自1968年後重返亞洲杯決賽周。許賢表示，對港足在亞洲盃外圍賽表現感到滿意，更稱今日是特地來見偶像「威威」。</p>
 <p>許賢提到，自黃威效力深水埗已留意對方，笑言最近在電視上看到「威威」入波，才重燃對港足的熱愛。他表示，港足在國際比賽中全力爭勝，「呢件事好勁㗎嘛」，希望有更多球迷支持及觀看本地足球。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/JAQ7Nj" title="DSC_6757"><img src="https://live.staticflickr.com/65535/52171754749_2c321479e0_z.jpg" width="640" alt="DSC_6757" /></a><br /><em>黃威</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/JAQ7Nj" title="DSC_6757"><img src="https://live.staticflickr.com/65535/52171754749_2c321479e0_z.jpg" alt="DSC_6757" /></a><br /><em>黃威</em></p>
 <p>在球員分享時，黃威表示，港足初時有不少負面消息，包括外流球員未能歸隊，在印度當地亦遇到不少困難，「喺咁難嘅情況下出到線，係開心嘅事。」被問到會否外流，黃威指是多年夢想，透露早前曾有機會但未能成行，希望在退役前能再次嘗試，「唔好俾自己足球路上有遺憾」。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7V1L57" title="DSC_6770"><img src="https://live.staticflickr.com/65535/52171755199_b842c25472_z.jpg" width="640" alt="DSC_6770" /></a><br /><em>羅梓駿</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7V1L57" title="DSC_6770"><img src="https://live.staticflickr.com/65535/52171755199_b842c25472_z.jpg" alt="DSC_6770" /></a><br /><em>羅梓駿</em></p>
 <p><strong>羅梓駿：亞洲盃決賽週想對中國</strong></p>
 <p>羅梓駿在今屆賽事被安排踢翼衛，並且表演不俗。他稱港足嘗試新踢法兼能取得好成績，認為並不容易，對能夠出線感高興；個人在踢法上更為進取，並明言希望能多踢翼。被問到亞洲盃決賽週的對手，羅梓駿表示希望和中國交手，但強調所有球隊包括日本、韓國的實力均很強。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/e0006i" title="DSC_6972"><img src="https://live.staticflickr.com/65535/52171975075_94e299025c_z.jpg" width="640" alt="DSC_6972" /></a><br /><em>鞠盈智</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/e0006i" title="DSC_6972"><img src="https://live.staticflickr.com/65535/52171975075_94e299025c_z.jpg" alt="DSC_6972" /></a><br /><em>鞠盈智</em></p>
 <p><strong>鞠盈智透露安達臣常播曼城、利物浦影片</strong></p>
 <p>「老大哥」鞠盈智指，安達臣的踢法為現時球壇最頂級、新晉，包括常常會播放英超球隊曼城及利物浦的影片學習踢法。他期望，港足能在來年亞洲盃取得入球及贏波。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/5xC5h0" title="DSC_6990"><img src="https://live.staticflickr.com/65535/52171974570_1cd2b1e288_z.jpg" width="640" alt="DSC_6990" /></a><br /><em>劉學銘</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/5xC5h0" title="DSC_6990"><img src="https://live.staticflickr.com/65535/52171974570_1cd2b1e288_z.jpg" alt="DSC_6990" /></a><br /><em>劉學銘</em></p>
 <p>在賽事中首次以大港腳身份上陣的劉學銘，他則認為港足晉級可為香港及球迷注入正能量，指球員出外集訓對提升狀態有很大幫助。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Z2VR9P" title="DSC_6952"><img src="https://live.staticflickr.com/65535/52171975740_ca247246b6_z.jpg" width="640" alt="DSC_6952" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Z2VR9P" title="DSC_6952"><img src="https://live.staticflickr.com/65535/52171975740_ca247246b6_z.jpg" alt="DSC_6952" /></a></p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
