--- a/_posts/2022-06-24-INMEDIA-被追問高官相繼確診-張竹君-不會透露個別人士資料.html
+++ b/_posts/2022-06-24-INMEDIA-被追問高官相繼確診-張竹君-不會透露個別人士資料.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/chp%201280_1.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>本港確診人數連續第十日破千，今新增1,860人染疫，當中1,721宗為本地感染。多名政府高官在七一回歸前夕染疫，當局在疫情記者會上被追問群組詳情，衞生防護中心傳染病處主任張竹君守口如瓶，稱「唔好意思」，強調不會透露個別人士的確診資料。</p>
+<img src="https://www.inmediahk.net/files/column_images/chp%201280_1.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>本港確診人數連續第十日破千，今新增1,860人染疫，當中1,721宗為本地感染。多名政府高官在七一回歸前夕染疫，當局在疫情記者會上被追問群組詳情，衞生防護中心傳染病處主任張竹君守口如瓶，稱「唔好意思」，強調不會透露個別人士的確診資料。</p>
 <p>特首辦主任、候任政務司司長陳國基、政制及內地事務局局長曾國衞，以及發展局常任秘書長劉俊傑<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E6%9B%BE%E5%9C%8B%E8%A1%9E%E5%8F%8A%E9%99%B3%E5%9C%8B%E5%9F%BA%E7%A2%BA%E8%A8%BA%E6%96%B0%E5%86%A0-%E6%9B%BE%E5%A6%BB%E4%BD%95%E7%8F%AE%E7%8F%8A%E6%A0%B8%E9%85%B8%E7%B5%90%E6%9E%9C%E9%99%B0%E6%80%A7">昨日確診</a>。 《明報》問及戴著口罩與確診人士開會，是否屬於密切接觸者；張竹君稱，密切接觸者一般指同住家人，抑或是患者在傳染期前兩天接觸過、且進行不戴口罩活動的人士，有戴上口罩的不歸類，但如出現群組爆發則另計。</p>
 <p><strong>屯門海港酒家群組多10人染疫 19個環境樣本全陰性<strong></strong></strong></p>
 <p>在1,721宗本地個案中，610宗經核酸檢測確診，另外1,111宗快速測試後經申報及核酸檢測確認。</p>
