Update VOCUS 2022-06-27 patch

--- a/_posts/2022-06-26-VOCUS-中國的真正弱點是欠缺自主創新能力-是在這方面輸給台灣太多.html
+++ b/_posts/2022-06-26-VOCUS-中國的真正弱點是欠缺自主創新能力-是在這方面輸給台灣太多.html
@@ -8,4 +8,13 @@ tags: blog
 author: 吳嘉隆
 ---
 
-中國的真正弱點是欠缺自主創新能力，是在這方面輸給台灣太多
+<p>（1）我們都看得出來，美國與中共陷入對抗的長期趨勢中，而且美國人完全不怕中共所謂的「奉陪到底」，恰恰相反，美國巴不得中共能奉陪到底，打一場「長期消耗戰」：</p>
+<p>美國的拿手好戲，就是要把中共活生生拖垮。</p>
+<p>（2）在這個背景下，我們要看懂，大國博弈表面上是在軍事與外交上較量，但是關鍵在經濟。</p>
+<p>經濟表面上是貿易與投資的交鋒，但是關鍵在技術。</p>
+<p>技術表面上是晶片，但是關鍵在技術創新能力，還有，更重要的，就是企業家才能（entrepreneurship）。</p>
+<p>先說一下什麼是企業家才能，這指的是民營企業家，他要有商業眼光，然後做下面4件事情：</p>
+<p>設計商業模式，</p>
+<p>組織資源，</p>
+<p>推動創新，</p>
+<p>承擔風險。</p>
