--- a/_posts/2022-06-26-VOCUS-中國經濟的長期趨勢不在於基礎建設-而是在於.html
+++ b/_posts/2022-06-26-VOCUS-中國經濟的長期趨勢不在於基礎建設-而是在於.html
@@ -8,4 +8,17 @@ tags: blog
 author: 吳嘉隆
 ---
 
-<p><br></p>
+<p>中國經濟能不能保持長期增長的趨勢，這是觀察中國經濟的一個重點議題。那麼這個議題要怎麼看呢？</p>
+<p>我這裡提出一個視角：中國經濟的問題不在於少了基礎建設的投資，而是少了對人才的投資。</p>
+<p>共產黨眼中看到的總是硬體項目，而不是相對比較無形的東西，那些跟人的創造力與生產力有關的東西。</p>
+<p>要講人才，中國是有的，但是中國共產黨的統治，會讓所有成果遲早都要被共產黨收割，這就叫做「黨的領導」。</p>
+<p>一旦民族主義情緒退燒，高手們不再心甘情願為土匪們幹活，那麼這種專制體制就會撐不下去。</p>
+<p>大國崛起說到底要靠自主創新能力，而不是竊取別人的技術的能力。要扎扎實實地練功夫，而不是想著彎道超車這樣的投機取巧。要像小國那樣謙卑，而不是像大國那樣自鳴得意。</p>
+<p>共產黨追求的是控制，是社會控制，所以，所有的人才都要歸黨來控制。中國不是沒有人才，而是￼中國共產黨就是想把所有的人才都框起來，都要聽黨的號令，都要為黨效勞。</p>
+<p>中共的體制是黨外專制，黨內獨裁，一路搞下去，權力根本沒有制約與監督，而是越來越集中，最後連黨內的元老也要監控，整個國家會變成大號的集中營。這次的上海清零措施已經顯現了這一點，以對抗疫情為名，對社會進行監控。</p>
+<p>中國共產黨不會去搞資本主義，而是搞以權力為基礎的主義，叫做「權本主義」。中國共產黨追求的是控制，用權力來控制，甚至於用槍桿子來控制，而真正的資本主義追求的是競爭，在市場競爭，用創新來競爭。你看出差別了嗎？</p>
+<p>將來，中國經濟的轉型，是要從控制轉向競爭，從黨的領導轉向市場引導。然後，創造一個讓人才能充分發揮的大環境，讓人才彼此去互相競爭。要這樣，才有辦法實現長期增長。</p>
+<p>創新的背後是文化，要懂得尊重多元與差異，所以千萬不能搞一言堂，而是要「百花齊放，百家爭鳴」，還要講究誠信與契約。</p>
+<p>這就是為什麼我們要講究價值觀，要擁抱普世價值，要追求民主，自由，法治，人權。因為要講究自主創新，那就不能一切都聽黨的，而是要在全社會建立起支持個人自由的制度，包括言論自由，新聞自由，出版自由，宗教自由。</p>
+<p>中國的人才真的要到海外來，才能真正利用民主、多元與創新的文化，來發揮自己的才能，來實現人生的價值！</p>
+<p>在一個自由多元的環境，你的同事也是高手，高手與高手互相激盪，刺激了彼此，於是發揮更高的生產力與創造力，所以，我鼓勵真正的人才到美國來，與全世界的高手組成團隊，一起創新！</p>
