--- a/_posts/2022-06-26-INMEDIA-國安處拘兩名男子-涉煽動及管有攻擊性武器.html
+++ b/_posts/2022-06-26-INMEDIA-國安處拘兩名男子-涉煽動及管有攻擊性武器.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/112_2.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>警務處國家安全處拘捕兩名男子，他們涉嫌干犯「作出具煽動意圓的行為」、「管有仿製火器」、「管有攻擊性武器」和「無牌管有無線電通訊器具」罪，二人正被扣留調查。</p>
-<p>兩名被捕的男子分別為31歲及53歲，今日在長沙灣及柴灣被警方國安處人員拘捕。</p>
-<p>警方國安處持法庭手令，在二人的住所檢獲曾用作發佈煽動意圖訊息的電子通訊器材、電腦、軍刀及一支仿製槍械。</p>
+<img src="https://www.inmediahk.net/files/column_images/112_2.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>七一在即，警務處國家安全處今日（6月26日）拘捕兩名男子，他們涉嫌干犯「作出具煽動意圓的行為」、「管有仿製火器」、「管有攻擊性武器」和「無牌管有無線電通訊器具」罪，兩人正被扣留調查。</p>
+<p>國安處晚上表示，今日（6月26日）在長沙灣及柴灣採取行動，拘捕兩名分別31歲及53歲的男子。警方亦根據法庭搜令，搜查兩人住所，檢獲曾用作發佈煽動意圖信息的電子通訊器材、電腦、軍刀及一枝仿製槍械。</p>
+<p>兩人以涉嫌違反香港法例第200章《刑事罪行條例》第9及10條「作出具煽動意圖的行為」罪、第238章《火器及彈藥條例》第20條「管有仿製火器」罪、第228章《簡易程序治罪條例》第17條「管有攻擊性武器」罪及第106章《電訊條例》第8條「無牌管有無線電通訊器具」罪被捕，現正被扣留調查。</p>
 </div></div></div>
