--- a/_posts/2022-06-27-INMEDIA-6人涉理大逃入科學館-警稱有人從理大衝出-否認是步行速度-急步-同-行-兩樣嘢.html
+++ b/_posts/2022-06-27-INMEDIA-6人涉理大逃入科學館-警稱有人從理大衝出-否認是步行速度-急步-同-行-兩樣嘢.html
@@ -8,18 +8,18 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/12_30.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年11月發生「理大圍城」，警方事隔一年半起訴29人暴動罪。首批被控理大內暴動的6人，被指逃入科學館最後被捕，今（27日）在區域法院第8日續審。偵緝警長李俊發供稱，案發時於加連威老道近科學館道的防線駐守，期間見一群約100人從理大衝出，有人衝向警方防線及掟汽油彈，有人分散走。辯方盤問時問到，從理大出來的人實際上是用步行速度走出，李不同意，解釋有人跑有人急步行，並強調：「『急步』同『行』兩樣嘢嚟嘅！」。</p>
+<img src="https://www.inmediahk.net/files/column_images/12_30.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年11月發生「理大圍城」，警方事隔一年半起訴29人暴動罪。首批被控理大內暴動的6人，被指逃入科學館最後被捕，今（27日）在區域法院第8日續審。偵緝警長李俊發供稱，案發時於加連威老道近科學館道的防線駐守，期間見一群約100人從理大衝出，有人衝向警方防線及掟汽油彈，有人分散走。辯方盤問時問到，從理大出來的人實際上是用步行速度走出，李不同意，解釋有人跑有人急步行，並強調：「『急步』同『行』兩樣嘢嚟嘅！」</p>
 <p>偵緝警長52890李俊發供稱，案發時駐守西九龍總區重案組第一隊1A隊。於2019年11月18日約早上8時，他與女偵緝督察謝依琳於加連威老道近科學館道的防線駐守，期間見一群約100人從理大衝出，有人衝向警方防線及掟汽油彈，有人分散走。其後機動部隊入科學館掃蕩，李與隊員亦一同入內掃蕩，期間聽到機動部隊在電梯大堂需要支援，於是他們前往。</p>
 <p>李指到場後見到機動部隊於8時45分已截停17人。李指自己的隊伍負責調查及搜證，並見該17人中有部分人戴上黑色口罩及保護裝備。李稱不會即時檢取被告穿在身上的物品，會留待返回臨時羈留區才會檢取。其後督察謝依琳於9時10分拘捕17人。</p>
-<p>辯方盤問時問到，從理大出來的人實際上是用步行速度走出，李不同意，並解釋有人跑有人急步行，並強調：「急步同行兩樣嘢嚟嘅！」。李又在盤問下改稱自己僅見到人群從理大方向衝出，並非見到人群在理大衝出。</p>
+<p>辯方盤問時問到，從理大出來的人實際上是用步行速度走出，李不同意，並解釋有人跑有人急步行，並強調：「急步同行兩樣嘢嚟嘅！」李又在盤問下改稱自己僅見到人群從理大方向衝出，並非見到人群在理大衝出。</p>
 <p>辯方又指出，在科學館內被捕的17人，沒有一人當時是戴上黑色口罩或保護裝備，李不同意。另外，李不能確定該17名被捕人士同該100名從理大衝出的人為同一批人。</p>
 <p>負責為首被告陳俊邦檢取證物的警長1703供稱，當日陳背着背包，內有寫隻「急救」的反光背心、包紮用品、泳鏡及黑色手袖。</p>
 <p>案件明續審。</p>
 <p>6名被告為：陳俊邦（21歲，伊利沙伯醫院病人助理）、陳頌欣（17歲，學生）、郭添明（20歲，餐廳經理）、羅健洋（16歲，中五生）、李日朗（20歲，理大學生）及袁太林（21歲，理大專上學院學生）。控方指，首4名被告並非理大學生，而李日朗為理大建築科技及管理學高級文憑學生，袁太林為理大專上學院學生。</p>
 <p>案件編號：DCCC 191、192、195、197、199、202/2021（已合併）</p>
 <p>相關報導：</p>
-<p>審訊第一日<br /><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E9%A6%96%E6%89%B9%E8%A2%AB%E6%8E%A7%E7%90%86%E5%A4%A7%E5%85%A7%E6%9A%B4%E5%8B%95-6%E4%BA%BA%E4%B8%8D%E8%AA%8D%E7%BD%AA%E5%8F%97%E5%AF%A9-%E6%8E%A7%E6%96%B9%E6%8C%87%E5%90%84%E4%BA%BA%E7%AA%81%E5%9C%8D%E5%BE%8C%E9%80%83%E5%85%A5%E7%A7%91%E5%AD%B8%E9%A4%A8%E6%8F%9B%E8%A1%AB%E5%8D%B8%E8%A3%9D%E5%82%99">首批被控理大內暴動 6人不認罪受審 控方指各人突圍後逃入科學館換衫卸裝備</a></p>
-<p>審訊第四日<br /><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/6%E4%BA%BA%E6%B6%89%E7%90%86%E5%A4%A7%E9%80%83%E5%85%A5%E7%A7%91%E5%AD%B8%E9%A4%A8-%E7%89%87%E8%A6%8B%E8%AD%A6%E6%96%B9%E6%96%BC%E7%A7%91%E5%AD%B8%E9%A4%A8%E5%9E%83%E5%9C%BE%E8%BB%8A%E6%AA%A2%E5%8F%96%E6%B1%BD%E6%B2%B9%E5%BD%88%E5%8F%8A%E8%A3%9D%E5%82%99">6人涉理大逃入科學館 片見警方於科學館垃圾車檢取汽油彈及裝備</a></p>
-<p>審訊第五日<br /><a href="https://www.inmediahk.net/node/1090027/">首批理大暴動案 警稱延長時間予沒參與暴動者離開 強調「入得去一定知點離開」</a></p>
-<p>審訊第六日<br /><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E7%90%86%E5%A4%A7%E9%80%83%E5%85%A5%E7%A7%91%E5%AD%B8%E9%A4%A8%E6%A1%88-%E7%9D%A3%E5%AF%9F%E5%90%A6%E8%AA%8D%E8%AD%A6%E5%93%A1%E5%91%BD%E4%BB%A4%E8%A2%AB%E6%8D%95%E4%BA%BA%E5%A3%AB%E3%80%8C%E9%9B%99%E6%89%8B%E6%93%BA%E5%96%BA%E9%A0%AD%EF%BC%8C%E5%A5%BD%E4%BC%BC%E6%89%93%E9%9D%B6%E5%92%81%E6%A8%A3%E3%80%8D">理大逃入科學館案 督察否認警員命令被捕人士「雙手擺喺頭，好似打靶咁樣」</a></p>
-</div></div></div>
+<p><strong>審訊第一日</strong><br /><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E9%A6%96%E6%89%B9%E8%A2%AB%E6%8E%A7%E7%90%86%E5%A4%A7%E5%85%A7%E6%9A%B4%E5%8B%95-6%E4%BA%BA%E4%B8%8D%E8%AA%8D%E7%BD%AA%E5%8F%97%E5%AF%A9-%E6%8E%A7%E6%96%B9%E6%8C%87%E5%90%84%E4%BA%BA%E7%AA%81%E5%9C%8D%E5%BE%8C%E9%80%83%E5%85%A5%E7%A7%91%E5%AD%B8%E9%A4%A8%E6%8F%9B%E8%A1%AB%E5%8D%B8%E8%A3%9D%E5%82%99">首批被控理大內暴動 6人不認罪受審 控方指各人突圍後逃入科學館換衫卸裝備</a></p>
+<p><strong>審訊第三日</strong><br /><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/6%E4%BA%BA%E6%B6%89%E7%90%86%E5%A4%A7%E9%80%83%E5%85%A5%E7%A7%91%E5%AD%B8%E9%A4%A8-%E7%89%87%E8%A6%8B%E8%AD%A6%E6%96%B9%E6%96%BC%E7%A7%91%E5%AD%B8%E9%A4%A8%E5%9E%83%E5%9C%BE%E8%BB%8A%E6%AA%A2%E5%8F%96%E6%B1%BD%E6%B2%B9%E5%BD%88%E5%8F%8A%E8%A3%9D%E5%82%99">6人涉理大逃入科學館 片見警方於科學館垃圾車檢取汽油彈及裝備</a></p>
+<p><strong>審訊第四日</strong><br /><a href="https://www.inmediahk.net/node/1090027/">首批理大暴動案 警稱延長時間予沒參與暴動者離開 強調「入得去一定知點離開」</a></p>
+<p><strong>審訊第五日</strong><br /><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E7%90%86%E5%A4%A7%E9%80%83%E5%85%A5%E7%A7%91%E5%AD%B8%E9%A4%A8%E6%A1%88-%E7%9D%A3%E5%AF%9F%E5%90%A6%E8%AA%8D%E8%AD%A6%E5%93%A1%E5%91%BD%E4%BB%A4%E8%A2%AB%E6%8D%95%E4%BA%BA%E5%A3%AB%E3%80%8C%E9%9B%99%E6%89%8B%E6%93%BA%E5%96%BA%E9%A0%AD%EF%BC%8C%E5%A5%BD%E4%BC%BC%E6%89%93%E9%9D%B6%E5%92%81%E6%A8%A3%E3%80%8D">理大逃入科學館案 督察否認警員命令被捕人士「雙手擺喺頭，好似打靶咁樣」</a></p>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
