Update VOCUS 2022-06-28 patch

--- a/_posts/2022-06-27-VOCUS-立陶宛封鎖加里寧格勒的動機與未來.html
+++ b/_posts/2022-06-27-VOCUS-立陶宛封鎖加里寧格勒的動機與未來.html
@@ -8,4 +8,16 @@ tags: blog
 author: 王臻明
 ---
 
-<p><br></p>
+<p>是說在俄烏戰爭陷入僵局之際，波羅的海三國之一的立陶宛，宣布將嚴格遵守制裁俄羅斯貨品的禁令，禁止制裁名單上的貨品進入立陶宛。這看起來與鄰國一樣的政策，卻立刻引起俄羅斯的激烈反彈，因為俄羅斯的重要戰略要地加里寧格勒是個飛地，與俄羅斯本土並不相連，大半的生活必需品，都要從俄羅斯本土經白俄羅斯、立陶宛運往加里寧格勒，一旦立陶宛祭出這種禁令，等於是阻斷了俄羅斯與加里寧格勒的連絡路線。消息一出，加里寧格勒的居民陷入恐慌，開始擁入超市搶購各種民生物資，俄羅斯也揚言要激烈報復。</p>
+<img src="https://images.vocus.cc/44d4cbf1-ee5d-4e0a-9b13-06cfed5210e0.png" alt="紅色部份就是加里寧格勒，與俄羅斯本土隔著立陶宛、波蘭、白俄羅斯三國。">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">紅色部份就是加里寧格勒，與俄羅斯本土隔著立陶宛、波蘭、白俄羅斯三國。</figcaption>
+<p>加里寧格勒的戰略重要性，在之前的「圖解俄羅斯的長遠戰略地圖」中，就已經有過說明，在此不再贅述。歷史上，這塊飛地原本屬於德國，在第二次世界大戰結束後，戰敗的納粹德國，將部份領土割讓給波蘭與蘇聯，其中由蘇聯取得的部份，就改名為加里寧格勒。在當時，加里寧格勒並不是一塊飛地，因為蘇聯紅軍一併從納粹德國手中「奪回」了立陶宛。主要理由是立陶宛在沙皇時期就已經被俄羅斯併吞，只是在第一次世界大戰時，立陶宛又被德國占領。所以當共產鐵幕落下時，立陶宛與拉脫維亞、愛沙尼亞一樣，被迫成為了蘇聯的加盟共和國。</p>
+<h3><a href="https://vocus.cc/article/622da3d6fd89780001121556">圖解俄羅斯的長遠戰略地圖 | 王臻明 - vocus</a></h3><img src="https://images.vocus.cc/3c65df08-d228-4356-8f6a-ee1afe9d5b6e.png">
+<p>所以在前蘇聯時代，加里寧格勒並不是飛地，由立陶宛前往加里寧格勒，等於是在蘇聯國內旅行。問題出現在前蘇聯解體後，立陶宛獨立、波蘭脫離華沙公約組織，而讓加里寧格勒陷入與俄羅斯國土分離的情況。後來俄羅斯分別跟立陶宛與波蘭簽定協議，解決這個問題，其中最有名的是位於立陶宛與波蘭邊界上的蘇瓦基走廊（Suwalki  Gap）。波蘭過去曾經承諾，將永久開放這條長約110公里的狹長走道，以確保加里寧格勒的安全，但俄羅斯一直虎視眈眈，想要奪取這條狹長走道，重新連結加里寧格勒。</p>
+<p>立陶宛會兵行險著，背後可能有幾個目的，其一是俄烏戰爭已陷入僵局，想要進一步向俄羅斯施壓。其二是包括立陶宛在內的波羅的海三國，不滿西歐大國的消極態度，希望逼德國、法國承諾，加強協防面臨俄羅斯侵略壓力的東歐國家，所以用封鎖加里寧格勒來做為談判籌碼。其三突顯立陶宛的戰略重要性，好在未來爭取談判的優勢，畢竟俄烏戰爭已經打破了過去歐洲地區的平衡，勢必要建立新的秩序與架構。而立陶宛敢封鎖加里寧格勒的原因，在於立陶宛是北約國家，俄羅斯一旦攻擊立陶宛或波蘭，就是與整個北約宣戰。</p>
+<p>在前文「北約、歐盟的競爭與戰略重心的轉移」中，也曾經談到俄烏戰爭逆轉了之前歐盟逐步取代北約的趨勢，讓北約重新取得主導權。美國、英國未來將會支持東歐國家，以削弱傳統歐陸大國的影響力。立陶宛這次的行動，就是一個很好的例子。如此重大的事，立陶宛不可能沒有跟美國、英國商量過，畢竟這可能會將北約拖入戰火之中。但有意思的是，美國、英國並沒在第一時間出來表示反對意見。相反的，由德國、法國所主導的<a href="https://newtalk.tw/news/view/2022-06-24/775328">歐盟，則忙著想要化解危機，宣稱歐盟無意要封鎖加里寧格勒，希望俄羅斯冷靜。</a></p>
+<h3><a href="https://vocus.cc/article/6262137afd89780001b5933d">北約、歐盟的競爭與戰略重心的轉移 | 王臻明 - vocus</a></h3><span>是說許多人常會搞混北約與歐盟，分不清楚這兩者有何差異，為什麼俄羅斯強力阻止烏克蘭加入北約，卻不在乎烏克蘭加入歐盟。甚至有些人誤認為這兩者是互相隸屬的關係，北約是歐盟的軍事組織，但這完全是錯誤的觀念。兩者不僅非常不同，甚至還有些競爭關係。俄羅斯入侵烏克蘭後，不止激化了北約與歐盟的矛盾....... 地緣戰略, 北約, 華約, 俄羅斯, 烏克蘭, 法國, 德國, 美國, 北約, 烏克蘭, 競爭, 歐盟, 俄羅斯</span><img src="https://images.vocus.cc/0a137016-95db-49a1-8f1e-f8c6d2cf362a.png">
+<p>過去美國、英國都希望北約投入更多資源協防東歐國家，強化北約的東翼，反對最力的就是德國、法國等西歐大國。<a href="https://www.rfi.fr/tw/歐洲/20220622-愛沙尼亞總理-依照現有的北約防禦計畫，我國將被從地圖上抹去">愛沙尼亞總理數天前接受英國金融時報專訪時，就痛批北約目前的防禦計畫</a>，是讓波羅的海三國直接淪陷，然後在北約準備好以後，再出兵奪回波羅的海三國，所花費的時間可能要六個月，等於是讓俄羅斯有時間將波羅的海三國從地圖上抹去。從愛沙尼亞總理對北約的嚴厲批評，可以看出波羅的海三國目前的焦慮，立陶宛會採取如此激烈的措施，封鎖加里寧格勒，就是想打破目前的困境。</p>
+<p>歐盟若想解決目前的危機，勢必要拿出交換條件，這可能包括強化對烏克蘭的軍事援助，協助烏克蘭打破僵局。另外不再杯葛美國、英國對強化北約東側防線的計畫，承諾投入更多資源協助受到俄羅斯侵略威脅的國家，如愛沙尼亞、拉脫維亞、立陶宛與波蘭等國。另外就是接下來在安排新的經貿架構與安全協議時，給予立陶宛等國更多優惠地位。由於這三點目前符合目前美國、英國的利益，因此美國、英國可能會保持沉默，看立陶宛繼續勒索德國、法國，或是發發無關痛癢的聲明，作壁上觀。</p>
+<p>若在今天重新回顧美國前總統川普的政策，當時計畫撤離部份駐德美軍，一部分調往印太地區，一部分部署到波蘭、立陶宛等國，其實非常有先見之明。因為今日俄羅斯與中國已聯合起來挑戰世界秩序，東歐與第一島鏈國家成為了抗擊的第一線。美國在歐洲錯失提前部署的機會，才導致今日立陶宛必需要出此下策，逼使北約做出回應。未來如果美國也在印太地區錯失占位的先機，可能也會逼使第一島鏈國家，以封鎖部份航道的方式，來逼使國際社會正視危機。到時候可能會大幅影響世界貿易。</p>
+<p>立陶宛並不是有勇無謀，為了挑釁而挑釁，相反地立陶宛充份利用自己的地緣重要性，北約與歐盟的矛盾，來達到自己的戰略目標。只是立陶宛憑空創造出來的談判籌碼，其實拖著北約一起承擔了引爆第三次世界大戰的風險，俄羅斯要是真的進軍蘇瓦基走廊，或是攻擊立陶宛做為報復，將讓整個歐陸到大西洋都陷入戰火之中。不過由此也可以看出，俄羅斯入侵烏克蘭以後，世人發現俄羅斯原來早已疲弱不堪，波羅的海三國、芬蘭、瑞典雖然都擔心遭到俄羅斯攻擊，卻也有勇氣採取更激烈的方法，來反制俄羅斯的威脅。</p>
