--- a/_posts/2022-06-27-PQ-2022年北約峰會前夕-秘書長預見將有變革性的發展.html
+++ b/_posts/2022-06-27-PQ-2022年北約峰會前夕-秘書長預見將有變革性的發展.html
@@ -8,15 +8,15 @@ tags: blog
 author: 陳文正
 ---
 
-<p>2022 年北約峰會將於 6 月 29 日，在西班牙馬德里舉行。適逢俄烏戰爭，發生的「烏克蘭疲勞」，是否能夠長期以及如和協助烏克蘭抵抗俄羅斯入侵<a>，</a>北約將有重要討論提出「新戰略構想」來應對。秘書長史托騰柏格（Jens Stoltenberg）接受《POLITICO》的訪問，可以作為我們預判北約峰會的重點。</p>
+<p>2022 年北約峰會將於 6 月 29 日，在西班牙馬德里舉行。俄烏戰爭 2022 年 2 月 24 日開打至今，已經發生「烏克蘭疲乏」，是否能夠長期協助烏克蘭抵抗俄羅斯入侵<a>，</a>北約將納入在今年（ 2022）北約高峰會決議後的新版的「戰略構想」之中。秘書長史托騰柏格（Jens Stoltenberg）接受《POLITICO》的訪問，可以作為我們預判北約峰會的重點。</p>
 
 
 
-<p>2022 年全世界在疫情肆虐下漸漸恢復中，同時遭逢俄國入侵烏克蘭、中國進行一連串所謂的動態清零，形成全球糧食短缺、運輸困難、勞動力短缺等造成市場供給不足，讓全球物價大漲。全球性停滯性通膨的可能與經濟衰退的預期，不絕於耳。<strong>因此各國是否可以長時間支持烏克蘭戰爭，將成為這次峰會的重點之一。其次是芬蘭瑞典加入北約，最後是北約如何面對中國的挑戰。</strong></p>
+<p>2022 年全世界在疫情肆虐下漸漸恢復中，同時遭逢 2 月俄國入侵烏克蘭、3 月中國對各大城市開始進行一連串所謂的動態清零，形成全球糧食短缺、運輸困難、勞動力短缺等造成市場供給不足，讓全球物價大漲。全球性停滯性通膨的可能與經濟衰退的預期，不絕於耳。<strong>因此各國是否可以長時間支持烏克蘭戰爭，將成為這次峰會的重點之一。其次是芬蘭瑞典加入北約，最後是北約如何面對中國的挑戰。</strong></p>
 
 
 
-<h2><strong>北約國家將長期支援烏克蘭</strong></h2>
+<h2><strong>北約將長期支援烏克蘭</strong></h2>
 
 
 
@@ -50,11 +50,11 @@ author: 陳文正
 
 
 
-<p>芬蘭、瑞典在 2019 年因為土耳其清剿敘利亞庫北部的庫德族民兵，而對土耳其實施武器禁運。此外，土耳其還因購買俄羅斯的 S400，美國將土耳其排除 F-35 匿蹤戰機計畫之外。</p>
+<p>芬蘭、瑞典在 2019 年因為土耳其清剿敘利亞庫北部的庫德族民兵，而對土耳其實施武器禁運。儘管瑞典、芬蘭與土耳其的武器交易量並不大。此外，土耳其還因購買俄羅斯的 S400，美國將土耳其排除 F-35 匿蹤戰機計畫之外。</p>
 
 
 
-<p>在芬蘭、瑞典挾 70% 以上民意，申請加入北約之際，可想而知，土耳其不只想要解除武器禁運，也要切斷北歐對於庫德民兵的支持，同時條件談得好的話，甚至進一步購買美國戰機。<strong>不過目前唯一解套的可能，是芬蘭瑞典對土耳其解除武器禁運。</strong></p>
+<p>在芬蘭、瑞典挾 70% 以上民意，申請加入北約之際，可想而知，土耳其不只想要解除武器禁運，也要切斷北歐對於庫德民兵的支持，同時條件談得好的話，甚至進一步購買美國戰機。很難想像，芬蘭、瑞典會屈服於土耳其的要脅，而對庫德族人的政治庇護有所妥協，畢竟這涉及到更深沉的人道價值的問題。<strong>不過目前唯一解套的可能，是芬蘭、瑞典對土耳其解除武器禁運。</strong></p>
 
 
 
