--- a/_posts/2022-06-27-PQ-2022年北約峰會前夕-秘書長預見將有變革性的發展.html
+++ b/_posts/2022-06-27-PQ-2022年北約峰會前夕-秘書長預見將有變革性的發展.html
@@ -20,7 +20,7 @@ author: 陳文正
 
 
 
-<p>早在 2014 年俄國入侵克里米亞，北約國家就已經協助烏克蘭軍事現代化，在烏克蘭抵抗俄國入侵的意志與決心感動許多西方國家，紛紛伸出援手，不過戰事的結束似乎遙遙無期，而有了近期常被討論「烏克蘭疲乏」，因此，西方世界是否能夠長期協助烏克蘭抵抗俄羅斯入侵？讓人好奇。</p>
+<p>早在 2014 年俄國入侵克里米亞，北約國家（美國、加拿大、英國等）就已經開始協助烏克蘭軍事現代化，甚至在 2022 年俄烏戰爭爆發前，90%以上的全球地緣政治專家認為俄羅斯只是在烏克蘭邊境虛張聲勢時，北約官方就已經預告俄羅斯會入侵烏克蘭。在烏克蘭抵抗俄國入侵的意志與決心感動許多西方國家，紛紛伸出援手，不過戰事的結束似乎遙遙無期，而有了近期常被討論「烏克蘭疲乏」，因此，西方世界是否能夠長期協助烏克蘭抵抗俄羅斯入侵？讓人好奇。</p>
 
 
 
@@ -66,12 +66,12 @@ author: 陳文正
 
 
 
-<p>北約秘書長史托騰柏格（Jens Stoltenberg）指出， <strong>2010 年里斯本北約高峰會所通過的「戰略構想」，並不包括中國，當時的戰略構想中，俄羅斯還是北約的戰略夥伴。</strong>但目前情況已經完全不同了。2022 年將通過新的戰略構想，並非俄烏戰爭才有的，2021年12月16日，北約秘書長史托騰柏格與澤倫斯基見面時，就已經預告馬德里會議會有新的戰略構想。</p>
+<p>北約秘書長史托騰柏格（Jens Stoltenberg）指出， <strong>2010 年里斯本北約高峰會所通過的「戰略構想」，並不包括中國，當時的戰略構想中，俄羅斯還被北約視為戰略夥伴。</strong>但目前情況已經完全不同了。北約的「戰略構想」大概每10年更新一次，北約盟國會在價值重申上，針對局勢變化，進行集體安全上的評估。因此，2022 年將通過新的戰略構想，並非因為俄烏戰爭才有的構想，而是在 2021 年北約布魯塞爾峰會，就已經決定 2022 年馬德里峰會有新的戰略構想。</p>
 
 
 
 <div class="wp-container-2 wp-block-group pqnote"><div class="wp-block-group__inner-container">
-<p>回顧過去，2019 年 4 月北約才開始注意中國問題。直至 2020 年，北約還認為中國是機會也是挑戰。2021 年北約的領袖高峰會，可以發現過去聲明中的「機會」不見了，更直截挑明中國為「<strong>系統性挑戰</strong>」，自 2021 年 6 月北約對中國的態度，從謹慎轉為相對明確，也不過兩年時間。</p>
+<p>回顧過去，2019 年 4 月北約才開始注意中國問題。直至 2020 年，北約還認為中國是機會也是挑戰。2021 年北約的領袖高峰會，可以發現過去聲明中的「機會」不見了，更直接挑明中國為「<strong>系統性挑戰</strong>」，自 2021 年 6 月北約對中國的態度，從謹慎轉為相對明確，也不過兩年時間。</p>
 
 
 
