--- a/_posts/2022-06-29-INMEDIA-多家獲邀採訪回歸活動記者-遭新聞處以-保安理由-拒絕.html
+++ b/_posts/2022-06-29-INMEDIA-多家獲邀採訪回歸活動記者-遭新聞處以-保安理由-拒絕.html
@@ -14,4 +14,4 @@ author: 獨媒報導
 <p>不過昨日（6月28日）晚上，記協表示多家獲邀的傳媒派出的記者，被當局以「保安理由」拒絕，記協指涉及《明報》、《香港01》、《南華早報》、now新聞台及法新社等至少七間本地及外地大型通訊社、報章、電子傳媒及網媒，涉及至少十名記者。記協表示，政府新聞處雖表示可以更換記者，但由於同須符合檢疫要求，即6月26日起每日有陰性檢測結果，記協形容為「強人所難」，大部分被換人的機構已無法換人到場採訪。</p>
 <p>記協認為當局的採訪安排「臨時而狹隘」，並提出空泛的拒絕理由，嚴重損害本港的新聞自由，促當局盡快作出補救。記協表示，如未能讓具相當讀者群的傳媒機構到現場報道本港歷史時刻，將為此等全球觸目的盛事蒙上污點。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/21346F" title="Untitled"><img src="https://live.staticflickr.com/65535/52179396018_6838257b5c_z.jpg" alt="Untitled" /></a></p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
