--- a/_posts/2022-06-30-VOCUS-四菜一湯的典故.html
+++ b/_posts/2022-06-30-VOCUS-四菜一湯的典故.html
@@ -8,4 +8,16 @@ tags: blog
 author: 我的學習筆記
 ---
 
-<p><br></p>
+<p>每次到餐桌上，我們華人常常都會習慣看到「四菜一湯」的排場。不過千萬別小看這個餐擺，這可是皇家排場啊！</p>
+<img src="https://images.vocus.cc/c8ef6502-274a-4921-83f2-3fe6ebe786d1.jpg" alt="一般我們現在常見的四菜一湯，或許大家會覺得有點不是這麼豐盛，但其實古代不是這樣的。圖片來源：掌站營銷學堂">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">一般我們現在常見的四菜一湯，或許大家會覺得有點不是這麼豐盛，但其實古代不是這樣的。圖片來源：掌站營銷學堂</figcaption>
+<p>這得從一首鳳陽民謠說起，這首歌是這麼唱的「朱皇上請客，四菜一湯，蘿蔔韭菜，著實甜香；小蔥豆腐，意義深長，一清二白，貪官心慌。」[1]</p>
+<p>這首歌有什麼意義呢，感覺就只是一位姓朱的皇帝請人吃飯。首先我們來抓關鍵字，「朱皇上」在歷史上只有後梁朝與大明朝才有，另一個關鍵字是「貪官」，貪官最怕的皇帝，也只有一位「朱皇上」，就是明太祖朱元璋。</p>
+<p>題外話，鳳陽，正好是朱元璋的老家。所以鳳陽人會流傳這首民謠，一方面是感歎家鄉出了個英雄，更是闡述這六百多年的歷史記憶。</p>
+<img src="https://images.vocus.cc/9579a4e5-9edb-4abe-8d5c-ccf92bf790ba.jpg" alt="鳳陽縣城有一座鼓樓，上面有明朝開國皇帝朱元璋手書的四個大字：萬世根本。圖片來源：維基百科">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">鳳陽縣城有一座鼓樓，上面有明朝開國皇帝朱元璋手書的四個大字：萬世根本。圖片來源：維基百科</figcaption>
+<p>相傳，在明朝剛開國的時候，出身貧寒的明太祖朱元璋查緝許多貪官汙吏與交兵悍將，還沒有穩住剛開闢的江山，就醉生夢死地沉浸在花花世界裡頭。於是朱元璋開始整頓這些他眼中的「王八烏龜蛋」，除了制定一系列的酷刑與秘密監察體制，他還規範官員要怎麼好好吃頓飯，而且還由自己示範。</p>
+<p>也就是前面那首鳳陽民謠說到的，大明朝從皇帝到地方官，都要好好體恤老百姓。朱元璋強調，就是因為元朝的腐敗，當年我們才拚死拚活的推翻蒙古人，重建江山。如果打下天下不好好治理，遲早要完。所以規定官員們從飲食做起，只能吃白蘿蔔、青韭菜、小蔥配白豆腐，再加上一鍋清湯，意謂著要清清白白，不能貪污、好好辦差。</p>
+<p>這個說法，似乎指出自民謠與地方傳說，目前不見史冊記載。而且，明朝在朱元璋駕崩後，官僚迅速腐敗，成為中國帝制最貪汙的時候，說起來也滿諷刺的。不過現在人在吃「四菜一湯」也不會這樣吃，反而成為數量習慣而已，菜的內容可以說是多采多姿，不像朱皇上那麼的清寡單薄啊。</p>
+<h3><a href="https://www.youtube.com/shorts/EBRi8LjpCdU">四菜一湯跟清廉有關？餐桌上的國學大道｜我的學習筆記 #shorts</a></h3><span>國學 #四菜一湯 #朱元璋📍讓我們繼續活下去 ► http://bit.ly/2tGL3eB🎬更多的學習筆記YOUTUBE長影片討論 ► https://reurl.cc/gy2ZRTiktok上更多短影片 ► https://reurl.cc/bkjjz3Facebook關注更多消息 ► https:/...</span><img src="https://i.ytimg.com/vi/EBRi8LjpCdU/hq2.jpg">
+<p>[1] 曾學英，《中華文化叢書：豆腐》，頁149。</p>
