--- a/_posts/2022-06-29-PQ-台北羽球公開賽無法成功升級-羽協-中國因素阻撓.html
+++ b/_posts/2022-06-29-PQ-台北羽球公開賽無法成功升級-羽協-中國因素阻撓.html
@@ -24,7 +24,7 @@ author: Salima
 
 
 
-<figure class="wp-block-image size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/b5e31235-202206290001-1024x683.jpg" alt="" class="wp-image-106188" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/b5e31235-202206290001-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/b5e31235-202206290001-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/b5e31235-202206290001-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/b5e31235-202206290001-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/b5e31235-202206290001-2048x1365.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台北羽球公開賽啟動儀式合影。（右2體育署林哲宏副署長、中間羽協張國祚理事長、左2黃珊珊副市長）圖／教育部體育署</figcaption></figure>
+<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/b5e31235-202206290001-1024x683.jpg" alt="" class="wp-image-106188" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/b5e31235-202206290001-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/b5e31235-202206290001-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/b5e31235-202206290001-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/b5e31235-202206290001-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/b5e31235-202206290001-2048x1365.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台北羽球公開賽啟動儀式合影。（右2體育署林哲宏副署長、中間羽協張國祚理事長、左2黃珊珊副市長）圖／教育部體育署</figcaption></figure>
 
 
 
