--- a/_posts/2022-07-01-INMEDIA-習近平結束兩日訪港-李家超-帶俾香港喜悅-關懷與動力.html
+++ b/_posts/2022-07-01-INMEDIA-習近平結束兩日訪港-李家超-帶俾香港喜悅-關懷與動力.html
@@ -12,4 +12,5 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/32e8iG" title="1217062"><img src="https://live.staticflickr.com/65535/52184762987_d4793a31f6_b.jpg" alt="1217062" /></a></p>
 <p>李家超指習近平訪港只有兩日，但內容豐富，並對香港有五方面重要意義，包括在疫情下親臨香港，反映高度重視香港同胞、宣示一國兩制方針不會改變及中央全力支持新一屆政府施政。他又強調，香港慶回歸氣氛濃厚，希望市民趁七一假期共享歡樂氣氛。</p>
 <p>習近平中午到西九龍高鐵站乘坐高鐵，李家超一直陪伴在側，前行政長官林鄭月娥、全國政協副主席梁振英、政務司司長陳國基及終審法院首席法官張舉能等人則一字排開歡送。期間，有學生揮動國旗、區旗及鮮花高唱《我和我的祖國》與《東方之珠》，習近平更主動走向學生面前駐足欣賞。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Va2AAg" title="1217032"><img src="https://live.staticflickr.com/65535/52186048564_315e83b96a_b.jpg" width="1024" alt="1217032" /></a></p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
