--- a/_posts/2022-07-01-PQ-北韓射殺南韓公務員事件翻盤-文在寅政府大事化小-啟人疑竇的6小時.html
+++ b/_posts/2022-07-01-PQ-北韓射殺南韓公務員事件翻盤-文在寅政府大事化小-啟人疑竇的6小時.html
@@ -17,7 +17,7 @@ author: 林貝利
 
 
 <figure class="wp-block-embed is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="해경 지휘부 사의‥대통령실 &quot;감사 먼저&quot; (2022.06.25/뉴스투데이/MBC)" src="https://www.youtube.com/embed/msmr-iWyjNM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="해경 지휘부 사의‥대통령실 "감사 먼저" (2022.06.25/뉴스투데이/MBC)"></iframe>
+<iframe loading="lazy" title="해경 지휘부 사의‥대통령실 &quot;감사 먼저&quot; (2022.06.25/뉴스투데이/MBC)" src="https://www.youtube.com/embed/msmr-iWyjNM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="해경 지휘부 사의‥대통령실 "감사 먼저" (2022.06.25/뉴스투데이/MBC)"></iframe>
 </div><figcaption>海洋警察廳包含廳長等9位高層為此事引咎辭職，但總統府尚未受理辭呈。</figcaption></figure>
 
 
